# history-service

./: .bzrignore  .gitignore  CMakeLists.txt  README.md  TODO  config.h.in  snapcraft.yaml
Ubuntu/: CMakeLists.txt
Ubuntu/History/: CMakeLists.txt  contactmatcher.cpp  contactmatcher_p.h  historyeventmodel.cpp  historyeventmodel.h  historygroupedeventsmodel.cpp  historygroupedeventsmodel.h  historygroupedthreadsmodel.cpp  historygroupedthreadsmodel.h  historyitemmodel.cpp  historyitemmodel.h  historymanager.cpp  historymanager.h  historymodel.cpp  historymodel.h  historyqmlfilter.cpp  historyqmlfilter.h  historyqmlintersectionfilter.cpp  historyqmlintersectionfilter.h  historyqmlplugin.cpp  historyqmlplugin.h  historyqmlsort.cpp  historyqmlsort.h  historyqmltexteventattachment.cpp  historyqmltexteventattachment.h  historyqmlunionfilter.cpp  historyqmlunionfilter.h  historythreadgroupingproxymodel.cpp  historythreadgroupingproxymodel.h  historythreadmodel.cpp  historythreadmodel.h  qmldir  sortproxymodel.cpp  sortproxymodel.h
cmake/modules/: GenerateTest.cmake
daemon/: CMakeLists.txt  HistoryDaemonObserver.client  HistoryService.xml  callchannelobserver.cpp  callchannelobserver.h  channelobserver.cpp  channelobserver.h  com.canonical.HistoryService.service.in  history-daemon.conf  history-daemon.desktop.in  historydaemon.cpp  historydaemon.h  historyservicedbus.cpp  historyservicedbus.h  main.cpp  org.freedesktop.Telepathy.Client.HistoryDaemonObserver.service.in  pluginmanager.cpp  rolesinterface.cpp  rolesinterface.h  telepathyhelper.cpp  telepathyhelper.h  textchannelobserver.cpp  textchannelobserver.h
daemon/tests/: CMakeLists.txt  DaemonTest.cpp  approver.cpp  approver.h  mockcontroller.cpp  mockcontroller.h
daemon/tests/mock/: CMakeLists.txt  MockConnection.xml  callchannel.cpp  callchannel.h  connection.cpp  connection.h  main.cpp  mockconnectiondbus.cpp  mockconnectiondbus.h  protocol.cpp  textchannel.cpp  textchannel.h
debian/: changelog  control  copyright  history-service-tools.install  history-service.install  libhistoryservice-dev.install  libhistoryservice0.install  qtdeclarative5-ubuntu-history0.1.install  rules
historyprivate/: CMakeLists.txt  channelobserver_p.h  contactmatcher.cpp  contactmatcher_p.h  telepathyhelper.cpp  telepathyhelper_p.h  utils.cpp  utils_p.h
plugins/sqlite/: CMakeLists.txt  schema.sql  sqlhistorywriter.cpp  sqlhistorywriter.h  sqlitedatabase.cpp  sqlitedatabase.h  sqlitehistoryeventview.cpp  sqlitehistoryeventview.h  sqlitehistoryitemview.cpp  sqlitehistoryitemview.h  sqlitehistoryplugin.cpp  sqlitehistoryplugin.h  sqlitehistoryplugin.qrc  sqlitehistoryreader.cpp  sqlitehistoryreader.cpp.THIS  sqlitehistoryreader.h  sqlitehistorythreadview.cpp  sqlitehistorythreadview.h  sqlitehistorywriter.cpp  sqlitehistorywriter.h  update_qrc.sh
plugins/sqlite/schema/: CMakeLists.txt  generate_schema.cpp  schema.sql  update_schema.sh.in  v1.sql  v10.sql  v11.sql  v12.sql  v13.sql  v14.sql  v15.sql  v16.sql  v17.sql  v18.sql  v19.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql  v8.sql  v9.sql
plugins/sqlite/tests/: CMakeLists.txt  SqliteEventViewTest.cpp  SqlitePluginTest.cpp  SqliteThreadViewTest.cpp
plugins/sqlite/upgrade/: v1.sql
src/: CMakeLists.txt  EventView  HistoryFilter  HistoryIntersectionFilter  HistoryItem  HistoryItemView  HistoryManager  HistoryPlugin  HistoryReader  HistoryService.xml  HistorySort  HistoryThread  HistoryThreadView  HistoryUnionFilter  HistoryWriter  IntersectionFilter  ItemFactory  PluginEventView  PluginEventView.xml  PluginManager  PluginThreadView  PluginThreadView.xml  TextEventAttachment  TextItem  ThreadView  UnionFilter  VoiceEvent  VoiceItem  channelobserver.cpp  channelobserver_p.h  contactmatcher.cpp  contactmatcher_p.h  event.cpp  event.h  event_p.h  eventview.cpp  eventview.h  eventview_p.h  eventwatcher.cpp  eventwatcher_p.h  (+92 more)
src/tests/: CMakeLists.txt  EventViewTest.cpp  FilterTest.cpp  IntersectionFilterTest.cpp  ItemFactoryTest.cpp  ManagerTest.cpp  PhoneUtilsTest.cpp  SortTest.cpp  TextEventAttachmentTest.cpp  TextEventTest.cpp  ThreadTest.cpp  UnionFilterTest.cpp  VoiceEventTest.cpp
tests/: CMakeLists.txt  Xwait  xvfb-run.sh  xvfb_wrapper.sh
tests/Ubuntu.History/: CMakeLists.txt  HistoryEventModelTest.cpp  HistoryGroupedThreadsModelTest.cpp  HistoryManagerTest.cpp
tests/common/: CMakeLists.txt  mockcontroller.cpp  mockcontroller.h  telepathytest.cpp  telepathytest.h
tests/common/mock/: CMakeLists.txt  MockConnection.xml  callchannel.cpp  callchannel.h  conferencecallchannel.cpp  conferencecallchannel.h  connection.cpp  connection.h  emergencymodeiface.cpp  mockconnectiondbus.cpp  mockconnectiondbus.h  speakeriface.cpp  textchannel.cpp  textchannel.h  ussdiface.cpp  voicemailiface.cpp
tests/daemon/: CMakeLists.txt  DaemonTest.cpp  approver.cpp  approver.h  handler.cpp  telepathyhelper.cpp  telepathyhelper.h
tests/historyprivate/: CMakeLists.txt  ContactMatcherTest.cpp
tests/libhistoryservice/: CMakeLists.txt  ContactMatcherTest.cpp  EventViewTest.cpp  FilterTest.cpp  IntersectionFilterTest.cpp  ManagerTest.cpp  ParticipantTest.cpp  PhoneUtilsTest.cpp  TextEventTest.cpp  ThreadTest.cpp  ThreadViewTest.cpp  VoiceEventTest.cpp
tests/plugins/sqlite/: CMakeLists.txt  SqliteEventViewTest.cpp  SqlitePluginTest.cpp
tools/: CMakeLists.txt  main.cpp  sample_client.qml
tools/backup/: .nvimrc  CMakeLists.txt  calllogs_export.xml  main.cpp  messages_example.xml
tools/maketextevents/: CMakeLists.txt  main.cpp
tools/makevoiceevents/: CMakeLists.txt  main.cpp
tools/qmlclient/: items.qml  sample_client.qml
tools/reader/: CMakeLists.txt  main.cpp
tools/tplogger-import/: CMakeLists.txt  main.cpp  telepathylogimporter.cpp  telepathylogimporter.h  telepathylogreader.cpp  telepathylogreader.h
