find_package(Qt5Xml REQUIRED)
find_package(Qt5DBus REQUIRED)
LINK_DIRECTORIES(../../src)
include_directories(../../src)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(SOURCES main.cpp)
add_executable(import-backup ${SOURCES})
target_link_libraries(import-backup Qt5::Xml Qt5::Core Qt5::DBus historyservice)
